Build from CommonJS source.
- Uses r.js RequireJS optimizer to build release/q.amd.js.
- Creates a temp file with `window.Q = require("./q");` and browserifies that to produce release/q.js.
- Minifies both to produce release/q.min.js and release/q.amd.min.js.
- Browser spec runner uses release/q.js.

--- a/spec/q-spec.html
+++ b/spec/q-spec.html
@@ -11,7 +11,7 @@
     <script src="lib/jasmine-promise.js"></script>
 
     <!-- include source files here... -->
-    <script src="../q.js"></script>
+    <script src="../release/q.js"></script>
 
     <!-- include spec files here... -->
     <script src="q-spec.js"></script>
